src/test/deca/etapeC/valid/while.deca
// Description:
//   Test du while
//
// Resultats:
//    ima_output: 123456789
//

{
    int a = 1;
    while(a < 10){
        print(a);
        a = a + 1;
    }
}
