src/test/deca/etapeC/invalid/add_overflow.deca
// Description:
//   Test de la division par zéro
//
// Resultats:
//  ima_output: overflow
//

{
    int a = 2147483647; // Plus grand nombre représentable sur 32 bits
    a = a + 1;
}